implementa navbar, layout responsivo e rotas base

--- a/src/components/pages/home/TabFilmes.css
+++ b/src/components/pages/home/TabFilmes.css
@@ -31,7 +31,6 @@
     align-items: center;
     justify-content: center;
     padding: 5px;
-    border: 1px solid #ccc;
     cursor: pointer;
     width: 100%;
     max-width: 300px;
@@ -64,6 +63,9 @@
     margin-top: 4px;
 
 }
+.tabfilmes ul li .classificacao p:first-child {
+    margin: 0 30px 0 0;
+}
 
 .tabfilmes ul li img.estrela {
     width: 10px;
@@ -81,5 +83,71 @@
     width: 300px;  
     height: 100%;
     pointer-events: none; 
-    background: linear-gradient(to left, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+    background: linear-gradient(to left, rgba(16, 14, 28, 1), rgba(16, 14, 28, 0))
+}
+
+
+@media (max-width: 1020px) {
+    .tabfilmes h1 {
+        font-size: 40px;
+    }
+
+    .tabfilmes ul li {
+        max-width: 260px;
+    }
+
+    .tabfilmes ul li img {
+        height: 380px;
+    }
+}
+
+
+@media (max-width: 770px) {
+    .tabfilmes h1 {
+        font-size: 35px;
+    }
+
+    .tabfilmes ul li {
+        max-width: 220px;
+    }
+
+    .tabfilmes ul li img {
+        height: 360px;
+    }
+}
+
+
+@media (max-width: 500px) {
+    .tabfilmes{
+        padding: 10;
+    }
+    .tabfilmes h1 {
+        font-size: 20px;
+    }
+
+    .tabfilmes ul li {
+        max-width: 120px;
+    }
+
+    .tabfilmes ul li h2{
+        font-size: 15px;
+        height: 35px;
+    }
+
+    .tabfilmes ul li img {
+        height: 180px;
+    }
+
+    .tabfilmes ul li .classificacao p {
+        font-size: 12px;
+    }
+
+    .tabfilmes ul li .classificacao p:first-child {
+    margin: 0 15px 0 0;
+}
+
+
+    .tabfilmes .liste-filmes .sombra {
+    width: 50px;   
+}
 }
