--- a/src/components/pages/home/TabFilmes.css
+++ b/src/components/pages/home/TabFilmes.css
@@ -9,7 +9,7 @@
 
 .tabfilmes ul  {
     display: flex;
-    padding: 10px 0;
+    padding: 10px 110px 10px 0;
     gap: 25px;
     align-items: center;
     overflow-x: auto;
@@ -57,7 +57,7 @@
    font-size: 20px;
    width: 100%;
    overflow-y: hidden;
-   height: 23px;
+   height: 30px;
    font-weight: bold;
 }
 
@@ -138,7 +138,7 @@
 
     .tabfilmes ul li h2{
         font-size: 15px;
-        height: 35px;
+        height: 50px;
     }
 
     .tabfilmes ul li img {
