--- a/src/components/pages/home/TabSeries.css
+++ b/src/components/pages/home/TabSeries.css
@@ -9,7 +9,7 @@
 
 .tabseries ul  {
     display: flex;
-    padding: 10px 0;
+    padding: 10px 110px 10px 0;
     gap: 25px;
     align-items: center;
     overflow-x: auto;
@@ -58,7 +58,7 @@
    font-size: 20px;
    width: 100%;
    overflow-y: hidden;
-   height: 23px;
+   height: 30px;
    font-weight: bold;
 }
 
@@ -139,7 +139,7 @@
 
     .tabseries ul li h2{
         font-size: 15px;
-        height: 35px;
+        height: 50px;
     }
 
     .tabseries ul li img {
