--- a/src/components/pages/home/Banner.css
+++ b/src/components/pages/home/Banner.css
@@ -9,21 +9,36 @@
 
 .banner .filme-text h1 {
     margin-bottom: 10px;
-    font-size: 50px ;
+    font-size: 40px ;
     width: 600px;
 }
 
 .banner .filme-text p {
     font-size: 20px;
     width: 600px;
+    height: 100%;
+    max-height: 140px;
     margin-bottom: 10px;
+    overflow-y: auto;
+    padding: 0 6px 7px 0;
 }
+
+.banner .filme-text p::-webkit-scrollbar{
+    width: 6px;
+}
+
+.banner .filme-text p::-webkit-scrollbar-thumb{
+    background: #3b82f6;
+    border-radius: 10px;
+}
+
 
 .banner .filme-text .banner-btn{
     background-color: #1d01d3;
     border: 1px solid #1d01d3;
+    padding: 10px;
     color: #fff;
-    font-size: 25px;
+    font-size: 20px;
     cursor: pointer;
     transition: 0.5s;
 }
