--- a/src/components/pages/home/TabFilmes.css
+++ b/src/components/pages/home/TabFilmes.css
@@ -11,7 +11,6 @@
     display: flex;
     padding: 10px 110px 10px 0;
     gap: 25px;
-    align-items: center;
     overflow-x: auto;
     cursor: grab;
     position: relative;
@@ -138,7 +137,8 @@
 
     .tabfilmes ul li h2{
         font-size: 15px;
-        height: 50px;
+        height: 100%;
+        max-height: 50px;
     }
 
     .tabfilmes ul li img {
