--- a/src/pages/Search.css
+++ b/src/pages/Search.css
@@ -130,7 +130,8 @@
 
     .search ul li h2{
         font-size: 15px;
-        height: 40px;
+        height: 100%;
+        max-height: 40px;
         line-height: 1.4;
     }
 
