feat(multi): adiciona modal de trailer para filmes e séries

--- a/src/pages/Multi.css
+++ b/src/pages/Multi.css
@@ -44,6 +44,12 @@
     text-align: center;
 }
 
+.description button{
+    background-color: #1d01d3;
+    color: #fff;
+    font-weight: bold;
+}
+
 
 
 .description.tv{
