--- a/src/components/pages/multi/ModalTrailer.css
+++ b/src/components/pages/multi/ModalTrailer.css
@@ -7,7 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background-color: #000000af; */
+    background-color: #000000af;
     z-index: 3;
 }
 
@@ -19,10 +19,23 @@
     border-radius: 10px;
     background-color: #000;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     animation: modalFade 1.5s ease;
 
+}
+
+.modal iframe {
+    width: 98%;
+    height: 500px;
+}
+
+.modal .btn-trailer {
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 @keyframes modalFade {
@@ -39,9 +52,17 @@
 
 @media (max-width:800px) {
     .modal{
-        height: 400px;
+        height: 500px;
     }
     .modal iframe {
-        height: 300px;
+        height: 350px;
+    }
+}
+@media (max-width:500px) {
+    .modal{
+        height: 450px;
+    }
+    .modal iframe {
+        height: 250px;
     }
 }
